--- a/article.html
+++ b/article.html
@@ -135,7 +135,7 @@
                         <div class="white-text">
                             <h1 class="h1-responsive section-title__text-title titulo-texto text-uppercase font-weight-bold">
                                 Articulo</h1>
-                            <hr class="o-hr-section-title">
+                            <hr class="o-section__hr">
                             <div class="section-title__text-subtitle d-flex w-100 mb-3 mt-0 flex-column">
                                 <!-- Author -->
                                 <div class="author text-white my-2">
@@ -215,7 +215,7 @@
                 <nav aria-label="Page navigation" class="d-flex align-items-center justify-content-center py-4">
                     <ul class="pagination pg-blue">
                         <li class="page-item">
-                            <a class="page-link" tabindex="-1">Previous</a>
+                            <a class="page-link" tabc-index="-1">Previous</a>
                         </li>
                         <li class="page-item active">
                             <a class="page-link">1</a>
@@ -235,7 +235,7 @@
             <!-- /* ------------------------------------ MODAL ----------------------------------*/ -->
             
             <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            <div class="modal fade" id="exampleModal" tabc-index="-1" role="dialog" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
