--- a/contacto.html
+++ b/contacto.html
@@ -131,7 +131,7 @@
                 <div class="mask rgba-stylish-strong main-view d-flex align-items-center justify-content-center">
                     <div class="white-text text-justify">
                         <h1 class="h1-responsive text-center">Contacto</h1>
-                        <hr class="o-hr-section-title">
+                        <hr class="o-section__hr">
                     </div>
                 </div>
             </div>
