--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
                 <div class="mask rgba-black-light main-view d-flex align-items-center justify-content-center">
                     <div class="white-text text-center px-5">
                         <h1 class="h1-responsive text-center pt-5">Diseño y Desarrollo Web</h1>
-                        <hr class="o-hr-section-title">
+                        <hr class="o-section__hr">
                         <p class="slogan mt-5">Donde nosotros damos a conocer tu negocio en la red.</p>
                         <div class="d-flex mt-5 justify-content-center">
-                            <a data-scroll href="#index" class="btn o-btn-theme">Secciones</a>
+                            <a data-scroll href="#index.html" class="btn o-btn-theme o-btn-theme--primary">Secciones</a>
                             <a data-scroll href="#contacto"
-                                class="btn btn-primary ml-3 d-md-none">Contacto</a>
+                                class="btn o-btn-theme o-btn-theme--secondary ml-3 d-md-none">Contacto</a>
                         </div>
                     </div>
                 </div>
@@ -155,7 +155,7 @@
         <!-- ./Bienvenida -->
 
         <!-- Bloque Secciones -->
-        <div id="index" class="index p-0">
+        <div id="index" class="c-index p-0">
 
             <!-- Secciones -->
             <div class="container-fluid">
@@ -166,19 +166,19 @@
                     <!-- Quienes Somos -->
                     <div class="col-md-6 p-0">
                         <div class="o-section-title view">
-                            <img class="index__img d-block w-100 img-fluid" src="dist/img/imagenes/edificio.jpeg" alt="edificio corporativo">
+                            <img class="c-index__img d-block w-100 img-fluid" src="dist/img/imagenes/edificio.jpeg" alt="edificio corporativo">
                             <div class="mask flex-center rgba-indigo-light">
                                 <div class="content">
                                     <div class="white-text p-5 text-justify">
                                         <h2 class="h2-responsive">Quienes Somos</h2>
-                                        <hr class="hr-card">
+                                        <hr class="o-section__hr  o-section__hr--left">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
                                             adipisci
                                             quas
                                             delectus
                                             id
                                             iste! Porro iste necessitatibus soluta delectus ipsum!</p>
-                                        <a href="quienes-somos.html" class="btn s-color-theme o-btn-theme">Continuar</a>
+                                        <a href="quienes-somos.html" class="btn o-btn-theme o-btn-theme--primary">Ir a Seccion</a>
                                     </div>
                                 </div>
                             </div>
@@ -189,19 +189,19 @@
                     <!-- Servicios -->
                     <div class="col-md-6 p-0">
                         <div class="o-section-title view">
-                            <img class="index__img d-block w-100" src="dist/img/imagenes/welcome.jpeg" alt="Stickers con leyenda imaginar, crear, inspirar">
+                            <img class="c-index__img d-block w-100" src="dist/img/imagenes/welcome.jpeg" alt="Stickers con leyenda imaginar, crear, inspirar">
                             <div class="mask flex-center rgba-indigo-light">
                                 <div class="content">
                                     <div class="white-text p-5 text-justify">
                                         <h2 class="h2-responsive">Servicios</h2>
-                                        <hr class="hr-card">
+                                        <hr class="o-section__hr o-section__hr--left">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
                                             adipisci
                                             quas
                                             delectus
                                             id
                                             iste! Porro iste necessitatibus soluta delectus ipsum!</p>
-                                        <a href="servicios.html" class="btn s-color-theme o-btn-theme">Continuar</a>
+                                        <a href="servicios.html" class="btn o-btn-theme o-btn-theme--primary">Ir a Seccion</a>
                                     </div>
                                 </div>
                             </div>
@@ -218,20 +218,20 @@
                     <!-- Blog -->
                     <div class="col-md-7 p-0">
                         <div class="o-section-title view">
-                            <img class="index__img d-block w-100" src="dist/img/imagenes/blog.jpeg" alt="libreta de trabajo y computadora">
+                            <img class="c-index__img d-block w-100" src="dist/img/imagenes/blog.jpeg" alt="libreta de trabajo y computadora">
                             <div class="mask flex-center rgba-indigo-light">
                                 <div class="content">
                                     <div class="white-text p-5 text-justify">
                                         <div class="content-title d-flex align-items-center">
                                             <h2 class="h2-responsive">Blog</h2>
                                         </div>
-                                        <hr class="hr-card">
+                                        <hr class="o-section__hr o-section__hr--left">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
                                             adipisci
                                             quas
                                             delectus id
                                             iste! Porro iste necessitatibus soluta delectus ipsum!</p>
-                                        <a href="blog.html" class="btn s-color-theme o-btn-theme">Continuar</a>
+                                        <a href="blog.html" class="btn o-btn-theme o-btn-theme--primary">Ir a Seccion</a>
                                     </div>
                                 </div>
                             </div>
@@ -242,20 +242,20 @@
                     <!-- Contacto -->
                     <div class="col-md-5 p-0 d-none d-md-block">
                         <div class="o-section-title view">
-                            <img class="index__img d-block w-100" src="dist/img/imagenes/contacto.jpeg" alt="personas felicitando y cerrando contrato">
+                            <img class="c-index__img d-block w-100" src="dist/img/imagenes/contacto.jpeg" alt="personas felicitando y cerrando contrato">
                             <div class="mask flex-center rgba-indigo-light">
                                 <div class="content">
                                     <div class="white-text p-5 text-justify">
                                         <div class="content-title d-flex align-items-center">
                                             <h2 class="h2-responsive">Contacto</h2>
                                         </div>
-                                        <hr class="hr-card">
+                                        <hr class="o-section__hr o-section__hr--left">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
                                             adipisci
                                             quas
                                             delectus id
                                             iste! Porro iste necessitatibus soluta delectus ipsum!</p>
-                                        <a href="contacto.html" class="btn s-color-theme o-btn-theme">Continuar</a>
+                                        <a href="contacto.html" class="btn o-btn-theme o-btn-theme--primary">Ir a Seccion</a>
                                     </div>
                                 </div>
                             </div>
