--- a/servicios.html
+++ b/servicios.html
@@ -129,7 +129,7 @@
                 <div class="mask rgba-stylish-strong main-view d-flex align-items-center justify-content-center">
                     <div class="white-text text-justify">
                         <h1 class="h1-responsive text-center">Servicios</h1>
-                        <hr class="o-hr-section-title">
+                        <hr class="o-section__hr">
                     </div>
                 </div>
             </div>
@@ -223,7 +223,7 @@
                                     </div>
                                     <div class="col-md-7 p-5 white ">
                                         <h2 class="h2-responsive s-text-theme">Páginas Responsivas</h2>
-                                        <hr class="hr-card">
+                                        <hr class="o-section__hr">
                                         <p class="mt-5"> Actualmente existe la necesidad de que la página web sea vista
                                             de forma correcta para cada plataforma como teléfonos inteligentes, tabletas
                                             o computadora. Para ello existe la forma de adaptar la información al
@@ -245,7 +245,7 @@
                                     </div>
                                     <div class="col-md-7 p-5 white ">
                                         <h2 class="h2-responsive s-text-theme">Optimización de SEO</h2>
-                                        <hr class="hr-card">
+                                        <hr class="o-section__hr">
                                         <p class="mt-5">Consiste en posicionar tu página en el mejor lugar dentro de la
                                             lista de resultados de la navegadores como son Google, Bing entre otros.
                                             Para ello trataremos de lograr un posicionamiento orgánico que consiste en
@@ -272,7 +272,7 @@
                         <!-- Tecnologias -->
                         <article class="tecnologias">
                             <h2 class="h2-responsive s-text-theme">Tecnologías</h2>
-                            <hr class="hr-card">
+                            <hr class="o-section__hr">
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum dignissimos
                                 recusandae voluptatum neque modi earum impedit in, nostrum harum repudiandae nihil
                                 excepturi
@@ -300,7 +300,7 @@
                         <!-- Herramientas de Diseño -->
                         <article class="herramientas-de-diseño my-5">
                             <h2 class="h2-responsive s-text-theme">Herramientas de Diseño</h2>
-                            <hr class="hr-card">
+                            <hr class="o-section__hr">
                             <p class="pt-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum dignissimos
                                 recusandae voluptatum neque modi earum impedit in, nostrum harum repudiandae nihil
                                 excepturi
@@ -321,7 +321,7 @@
                         <!-- Herramientas de Desarrollo -->
                         <article class="herramientas de desarrollo my-5">
                             <h2 class="h2-responsive s-text-theme">Herramientas de Desarrollo</h2>
-                            <hr class="hr-card">
+                            <hr class="o-section__hr">
                             <p class="pt-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum dignissimos
                                 recusandae voluptatum neque modi earum impedit in, nostrum harum repudiandae nihil
                                 excepturi
