--- a/blog.html
+++ b/blog.html
@@ -129,7 +129,7 @@
                 <div class="mask rgba-stylish-strong main-view d-flex align-items-center justify-content-center">
                     <div class="white-text text-justify">
                         <h1 class="h1-responsive text-center">Blog</h1>
-                        <hr class="o-hr-section-title">
+                        <hr class="o-section__hr">
                     </div>
                 </div>
             </div>
@@ -204,7 +204,7 @@
             <nav aria-label="Page navigation" class="d-flex align-items-center justify-content-center mb-0">
                 <ul class="pagination pg-blue">
                     <li class="page-item">
-                        <a class="page-link" tabindex="-1">Previous</a>
+                        <a class="page-link" tabc-index="-1">Previous</a>
                     </li>
                     <li class="page-item active">
                         <a class="page-link">1</a>
