--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -133,7 +133,7 @@
                 <div class="mask rgba-stylish-strong section-title d-flex align-items-center justify-content-center">
                     <div class="white-text text-justify">
                         <h1 class="h1-responsive text-center">Diseño y Desarrollo Web</h1>
-                        <hr class="o-hr-section-title">
+                        <hr class="o-section__hr">
                     </div>
                 </div>
             </div>
