--- a/blog.html
+++ b/blog.html
@@ -137,7 +137,7 @@
 
             <!-- Section Content -->
             <div class="o-section-content s-color-theme-1">
-                <div class="o-section-content-wrapper max-width">
+                <div class="o-section-content-wrapper max-width o-section-content-wrapper--blog">
                     <div class="container-fluid">
 
                         <!-- Artículos -->
@@ -148,8 +148,8 @@
                                     <img class="card-img-top mb-0" src="dist/img/imagenes/c4.jpg" alt="">
                                     <div class="card-body">
                                         <div class="text-title">
-                                            <h2 class="h2-responsive card-title s-text-theme font-weight-bold">Titulo</h2>
-                                            <div class="blog-subtitle w-100 mb-3 mt-0">
+                                            <h2 class="h2-responsive card-body__title s-text-theme font-weight-bold">Titulo</h2>
+                                            <div class="card-body__subtitle w-100 mb-3 mt-0">
                                                 <!-- Author -->
                                                 <div class="author m-2 s-text-theme">
                                                     <i class="far fa-user"></i>
@@ -174,14 +174,14 @@
                                             </div>
                                         </div>
                                         <hr>
-                                        <p class="card-text mt-1">Lorem ipsum dolor sit amet consectetur adipisicing
+                                        <p class="card-body__text mt-1">Lorem ipsum dolor sit amet consectetur adipisicing
                                             elit. Ea
                                             rerum, est exercitationem deserunt temporibus natus provident modi.
                                             Laudantium, quos dignissimos?</p>
                                         <hr>
                                         <!-- Boton -->
                                         <div class="w-100 text-center">
-                                            <a href="article.html" class="btn o-btn-theme text-white">Leer</a>
+                                            <a href="article.html" class="btn o-btn-theme o-btn-theme--primary">Leer Articulo</a>
                                         </div>
                                         <!-- Boton -->
 
