--- a/contacto.html
+++ b/contacto.html
@@ -211,7 +211,7 @@
                                 </form>
 
                                 <div class="text-center mt-4">
-                                    <a class="btn btn-lg o-btn-theme">Send</a>
+                                    <a class="btn btn-lg o-btn-theme o-btn-theme--primary">Send</a>
                                 </div>
 
                             </div>
