--- a/blog.html
+++ b/blog.html
@@ -119,17 +119,16 @@
     <!-- Encabezado -->
 
     <!-- Contenido -->
-    <main class="o-main">
-        <section class="o-section blog">
+    <main>
+        <section class="o-section">
+
             <!-- Section Title -->
-            <div class="o-section-title view">
-                <div class="o-section-title__section-img d-block w-100">
-                    <img src="dist/img/imagenes/blog.jpeg" class="img-fluid w-100" alt="" srcset="">
-                </div>
-                <div class="mask rgba-stylish-strong main-view d-flex align-items-center justify-content-center">
-                    <div class="white-text text-justify">
-                        <h1 class="h1-responsive text-center">Blog</h1>
-                        <hr class="o-section__hr">
+            <div class="view">
+                <img src="./dist/img/imagenes/blog.jpeg" class="o-section__img d-block w-100 position-fixed" alt="">
+                <div class="o-section__title">
+                    <div class="mask rgba-blue-light flex-center flex-column">
+                        <h1 class="o-section__h1">Blog</h1>
+                        <hr class="o-section__hr o-section__hr--center">
                     </div>
                 </div>
             </div>
@@ -148,7 +147,8 @@
                                     <img class="card-img-top mb-0" src="dist/img/imagenes/c4.jpg" alt="">
                                     <div class="card-body">
                                         <div class="text-title">
-                                            <h2 class="h2-responsive card-body__title s-text-theme font-weight-bold">Titulo</h2>
+                                            <h2 class="h2-responsive card-body__title s-text-theme font-weight-bold">
+                                                Titulo</h2>
                                             <div class="card-body__subtitle w-100 mb-3 mt-0">
                                                 <!-- Author -->
                                                 <div class="author m-2 s-text-theme">
@@ -174,14 +174,16 @@
                                             </div>
                                         </div>
                                         <hr>
-                                        <p class="card-body__text mt-1">Lorem ipsum dolor sit amet consectetur adipisicing
+                                        <p class="card-body__text mt-1">Lorem ipsum dolor sit amet consectetur
+                                            adipisicing
                                             elit. Ea
                                             rerum, est exercitationem deserunt temporibus natus provident modi.
                                             Laudantium, quos dignissimos?</p>
                                         <hr>
                                         <!-- Boton -->
                                         <div class="w-100 text-center">
-                                            <a href="article.html" class="btn o-btn-theme o-btn-theme--primary">Leer Articulo</a>
+                                            <a href="article.html" class="btn o-btn-theme o-btn-theme--primary">Leer
+                                                Articulo</a>
                                         </div>
                                         <!-- Boton -->
 
@@ -197,6 +199,7 @@
                 </div>
             </div>
             <!-- ./Section Content -->
+
         </section>
 
         <!-- Paginación -->
