--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -121,23 +121,21 @@
     <!-- Encabezado -->
 
     <!-- Contenido -->
-    <main class="o-main">
+    <main>
         <!-- Sobre Nosotros -->
-        <section class="about">
+        <section class="o-section">
 
-            <!-- Titulo -->
-            <div class="o-section-title view">
-                <div class="o-section-title__section-img d-block w-100">
-                    <img src="dist/img/imagenes/edificio.jpeg" class="img-fluid w-100 o-section-title__section-img_imagen" alt="" srcset="">
-                </div>
-                <div class="mask rgba-stylish-strong section-title d-flex align-items-center justify-content-center">
-                    <div class="white-text text-justify">
-                        <h1 class="h1-responsive text-center">Diseño y Desarrollo Web</h1>
-                        <hr class="o-section__hr">
+            <!-- Section Title -->
+            <div class="view">
+                <img src="./dist/img/imagenes/edificio.jpeg" class="o-section__img d-block w-100 position-fixed" alt="">
+                <div class="o-section__title">
+                    <div class="mask rgba-blue-light flex-center flex-column">
+                        <h1 class="o-section__h1">Quienes Somos</h1>
+                        <hr class="o-section__hr o-section__hr--center">
                     </div>
                 </div>
             </div>
-            <!-- ./Titulo -->
+            <!-- ./Section Title -->
 
             <!-- Contenido -->
             <div class="o-section-content content-bg lighten-5">
