--- a/servicios.html
+++ b/servicios.html
@@ -118,22 +118,21 @@
     <!-- Encabezado -->
 
     <!-- Contenido -->
-    <main class="o-main">
-        <section class="services">
+    <main>
+        <section class="o-section">
 
             <!-- Section Title -->
-            <div class="o-section-title view">
-                <div class="o-section-title__section-img d-block w-100">
-                    <img src="dist/img/imagenes/welcome.jpeg" class="img-fluid w-100" alt="" srcset="">
-                </div>
-                <div class="mask rgba-stylish-strong main-view d-flex align-items-center justify-content-center">
-                    <div class="white-text text-justify">
-                        <h1 class="h1-responsive text-center">Servicios</h1>
-                        <hr class="o-section__hr">
+            <div class="view">
+                <img src="./dist/img/imagenes/welcome.jpeg" class="o-section__img d-block w-100 position-fixed" alt="">
+                <div class="o-section__title">
+                    <div class="mask rgba-blue-light flex-center flex-column">
+                        <h1 class="o-section__h1">Servicios</h1>
+                        <hr class="o-section__hr o-section__hr--center">
                     </div>
                 </div>
             </div>
             <!-- ./Section Title -->
+
 
             <!-- Content -->
             <div class="o-section-content">
