--- a/blog.html
+++ b/blog.html
@@ -124,7 +124,7 @@
 
             <!-- Section Title -->
             <div class="view">
-                <img src="./dist/img/imagenes/blog.jpeg" class="o-section__img d-block w-100 position-fixed" alt="">
+                <img src="dist/img/imagenes/blog.jpeg" class="o-section__img d-block w-100 position-fixed" alt="">
                 <div class="o-section__title">
                     <div class="mask rgba-blue-light flex-center flex-column">
                         <h1 class="o-section__h1">Blog</h1>
