--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <hr class="o-section__hr">
                         <p class="slogan mt-5">Donde nosotros damos a conocer tu negocio en la red.</p>
                         <div class="d-flex mt-5 justify-content-center">
-                            <a data-scroll href="#index.html" class="btn o-btn-theme o-btn-theme--primary">Secciones</a>
+                            <a data-scroll href="#index" class="btn o-btn-theme o-btn-theme--primary">Secciones</a>
                             <a data-scroll href="#contacto"
                                 class="btn o-btn-theme o-btn-theme--secondary ml-3 d-md-none">Contacto</a>
                         </div>
