--- a/article.html
+++ b/article.html
@@ -119,12 +119,12 @@
     <!-- Encabezado -->
 
     <!-- Contenido -->
-    <main class="o-main">
+    <main>
         <section class="o-section">
 
             <!-- Section Title -->
             <div class="view">
-                <img src="./dist/img/imagenes/c4.jpg" class="o-section__img d-block w-100 position-fixed" alt="">
+                <img src="dist/img/imagenes/c4.jpg" class="o-section__img d-block w-100 position-fixed" alt="">
                 <div class="o-section__title">
                     <div class="mask rgba-blue-light flex-center flex-column">
                         <h1 class="o-section__h1">Article</h1>
