--- a/servicios.html
+++ b/servicios.html
@@ -214,11 +214,11 @@
                         <h2 class="h2-responsive s-text-theme text-center o-section-content__h2 pb-5">¿Qué ofrecemos? </h2>
 
                         <!-- Páginas Responsivas -->
-                        <article class="responsivo my-5 shadow-lg">
+                        <article class="my-5 shadow-lg">
                             <div class="container-fluid">
                                 <div class="row p-0">
                                     <div class="col-md-5 p-0">
-                                        <img src="dist/img/imagenes/responsivo.jpeg" alt="">
+                                        <img src="dist/img/imagenes/responsivo.jpeg" alt="" class="d-block w-100">
                                     </div>
                                     <div class="col-md-7 p-5 white ">
                                         <h2 class="h2-responsive s-text-theme">Páginas Responsivas</h2>
@@ -236,11 +236,11 @@
                         <!-- ./Páginas Responsivas -->
 
                         <!-- Optimizacion de SEO -->
-                        <article class="responsivo my-5 shadow-lg">
+                        <article class="my-5 shadow-lg">
                             <div class="container-fluid">
                                 <div class="row p-0">
                                     <div class="col-md-5 p-0">
-                                        <img src="dist/img/imagenes/c11.jpeg" alt="">
+                                        <img src="dist/img/imagenes/c11.jpeg" alt="" class="img-fluid">
                                     </div>
                                     <div class="col-md-7 p-5 white ">
                                         <h2 class="h2-responsive s-text-theme">Optimización de SEO</h2>
