--- a/servicios.html
+++ b/servicios.html
@@ -23,8 +23,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="dist/css/bootstrap.min.css">
+    <!-- Normalize CSS -->
+    <link rel="stylesheet" href="dist/css/normalize.css">
     <!-- Material Design Bootstrap -->
     <link rel="stylesheet" href="dist/css/mdb.min.css">
+    <!-- Normalize CSS -->
+    <link rel="stylesheet" href="dist/css/normalize.css">
     <!-- Your custom styles (optional) -->
     <link rel="stylesheet" href="dist/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
