--- a/contacto.html
+++ b/contacto.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="dist/css/bootstrap.min.css">
+    <!-- Normalize CSS -->
+    <link rel="stylesheet" href="dist/css/normalize.css">
     <!-- Material Design Bootstrap -->
     <link rel="stylesheet" href="dist/css/mdb.css">
     <!-- Your custom styles (optional) -->
