--- a/article.html
+++ b/article.html
@@ -216,7 +216,7 @@
     <!-- Modal -->
     <div class="modal fade" id="basicExampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header s-color-theme">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
