--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-navbar" href="quienes-somos.html">Quienes Somos</a>
+                        <a class="nav-link text-navbar" href="quienes-somos.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-navbar" href="servicios.html">Servicios</a>
@@ -162,17 +162,17 @@
             <!-- Secciones -->
             <div class="container-fluid">
 
-                <!-- quienes somos & servicios -->
+                <!-- Nosotros & servicios -->
                 <div class="row p-0">
 
-                    <!-- Quienes Somos -->
+                    <!-- Nosotros -->
                     <div class="col-md-6 p-0">
                         <div class="o-section-title view">
                             <img class="c-index__img d-block w-100 img-fluid" src="dist/img/imagenes/edificio.jpeg" alt="edificio corporativo">
                             <div class="mask flex-center rgba-indigo-light">
                                 <div class="content">
                                     <div class="white-text p-5 text-justify">
-                                        <h2 class="h2-responsive">Quienes Somos</h2>
+                                        <h2 class="h2-responsive">Nosotros</h2>
                                         <hr class="o-section__hr  o-section__hr--left">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
                                             adipisci
@@ -186,7 +186,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- ./Quienes Somos -->
+                    <!-- ./Nosotros -->
 
                     <!-- Servicios -->
                     <div class="col-md-6 p-0">
@@ -212,7 +212,7 @@
                     <!-- ./Servicios -->
 
                 </div>
-                <!-- quienes somos & servicios -->
+                <!-- Nosotros & servicios -->
 
                 <!-- Blog & Contacto -->
                 <div class="row p-0">
@@ -398,7 +398,7 @@
                             <a class="footer-link" href="index.html">Inicio</a>
                         </li>
                         <li class="py-2">
-                            <a class="footer-link" href="quienes-somos.html">Quienes Somos</a>
+                            <a class="footer-link" href="quienes-somos.html">Nosotros</a>
                         </li>
                         <li class="py-2">
                             <a class="footer-link" href="servicios.html">Servicios</a>
