--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -9,7 +9,7 @@
     <!-- Color navegador -->
     <meta name="theme-color" content="#0d47a1" />
     <!-- Titulo -->
-    <title> lionsdevstudio - Quienes Somos</title>
+    <title> lionsdevstudio - Nosotros</title>
     <!-- MDB icon -->
     <!-- <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon"> -->
     <!-- Favicon -->
@@ -77,7 +77,7 @@
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-navbar active" href="quienes-somos.html">Quienes Somos</a>
+                        <a class="nav-link text-navbar active" href="quienes-somos.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-navbar" href="servicios.html">Servicios</a>
@@ -132,7 +132,7 @@
                 <img src="dist/img/imagenes/edificio.jpeg" class="o-section__img d-block w-100 position-fixed" alt="">
                 <div class="o-section__title">
                     <div class="mask rgba-blue-light flex-center flex-column">
-                        <h1 class="o-section__h1">Quienes Somos</h1>
+                        <h1 class="o-section__h1">Nosotros</h1>
                         <hr class="o-section__hr o-section__hr--center">
                     </div>
                 </div>
@@ -142,17 +142,17 @@
             <!-- Contenido -->
             <div class="o-section-content content-bg lighten-5">
 
-                <!-- Quienes Somos -->
+                <!-- Nosotros -->
                 <section class="s-color-theme-1">
                     <div class="o-section-content-wrapper max-width">
-                        <h2 class="h2-responsive s-text-theme text-center o-section-content__h2 pb-5">Quienes Somos</h2>
+                        <h2 class="h2-responsive s-text-theme text-center o-section-content__h2 pb-5">Nosotros</h2>
                         <p>Somos un grupo de personas con grandes deseos de realizar
                             páginas amigables, personalizadas y únicas para los usuarios con manejo de proyectos de
                             todo tipo. Así como generar oportunidades para los clientes gracias al posicionamiento
                             y la flexibilidad que presta las páginas web adaptadas a diferentes dispositivos.</p>
                     </div>
                 </section>
-                <!-- ./Quienes Somos -->
+                <!-- ./Nosotros -->
 
                 <!-- Misión -->
                 <section class="s-color-theme-2">
@@ -325,7 +325,7 @@
                             <a class="footer-link" href="index.html">Inicio</a>
                         </li>
                         <li class="py-2">
-                            <a class="footer-link" href="quienes-somos.html">Quienes Somos</a>
+                            <a class="footer-link" href="quienes-somos.html">Nosotros</a>
                         </li>
                         <li class="py-2">
                             <a class="footer-link" href="servicios.html">Servicios</a>
