--- a/article.html
+++ b/article.html
@@ -75,7 +75,7 @@
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-navbar" href="quienes-somos.html">Quienes Somos</a>
+                        <a class="nav-link text-navbar" href="quienes-somos.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-navbar" href="servicios.html">Servicios</a>
@@ -263,7 +263,7 @@
                             <a class="footer-link" href="index.html">Inicio</a>
                         </li>
                         <li class="py-2">
-                            <a class="footer-link" href="quienes-somos.html">Quienes Somos</a>
+                            <a class="footer-link" href="quienes-somos.html">Nosotros</a>
                         </li>
                         <li class="py-2">
                             <a class="footer-link" href="servicios.html">Servicios</a>
